<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/marginMedium"
    tools:context=".MainActivity">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textSelect"
        android:textSize="@dimen/textSizeLarge"
        />
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkStart"
        android:textSize="@dimen/textSizeMedium"
        />
    <LinearLayout
        android:id="@+id/linearSub"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textfavorite"
            android:textSize="@dimen/textSizeLarge"/>
        <CheckBox
            android:id="@+id/checkStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/checkStart"
            android:textSize="@dimen/textSizeMedium"/>
        <RadioGroup
            android:id="@+id/rg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/textSizeMedium">

            <RadioButton
                android:id="@+id/radioPuppy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radioPuppy"
                android:textSize="@dimen/textSizeMedium"/>
            <RadioButton
                android:id="@+id/Kitty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radioKitty"
                android:textSize="@dimen/textSizeMedium"/>
            <RadioButton
                android:id="@+id/Snake"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radioSnake"
                android:textSize="@dimen/textSizeMedium"/>
        </RadioGroup>
        <Button
            android:id="@+id/btnDone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnDone"
            android:layout_margin="@dimen/textSizeMedium"/>
        <ImageView
            android:id="@+id/imgV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/dog"
            android:scaleType="fitXY"/>
    </LinearLayout>

</LinearLayout>